Tip for making slides full screen

--- a/01-cake.Rmd
+++ b/01-cake.Rmd
@@ -7,12 +7,14 @@ This approach is also presented in @wang2017data, which advocates for "bringing 
 
 ## Slides
 
-Click on the slides and then hit F on your keyboard to view the slides in full screen.
-
 ```{=html}
 <iframe src="https://rstudio-education.github.io/wtf-teach-rstudio-global/materials/01-cake/01-cake.html" width="672px" height="379px" allowfullscreen>
 </iframe>
 ```
+::: {.tip}
+To view the slides in full screen, click on the slides and then hit F on your keyboard.
+:::
+
 ## Your turn
 
 ### Do
