--- a/02-dayone.Rmd
+++ b/02-dayone.Rmd
@@ -9,12 +9,14 @@ This could be via RStudio Cloud or an RStudio Server you set up locally at your 
 
 ## Slides
 
-Click on the slides and then hit F on your keyboard to view the slides in full screen.
-
 ```{=html}
 <iframe src="https://rstudio-education.github.io/wtf-teach-rstudio-global/materials/02-dayone/02-dayone.html" width="672px" height="379px" allowfullscreen>
 </iframe>
 ```
+::: {.tip}
+To view the slides in full screen, click on the slides and then hit F on your keyboard.
+:::
+
 ## Your turn
 
 ### Do
