--- a/references.bib
+++ b/references.bib
@@ -20,3 +20,14 @@
   number={1},
   year={2017}
 }
+
+@inproceedings{raj2018,
+	title = {Koli Calling '18: 18th Koli Calling International Conference on Computing Education Research},
+	author = {{Raj}, {Adalbert Gerald Soosai} and {Patel}, {Jignesh M.} and {Halverson}, {Richard} and {Halverson}, {Erica Rosenfeld}},
+	year = {2018},
+	month = {11},
+	date = {2018-11-22},
+	publisher = {ACM},
+	doi = {10.1145/3279720.3279725},
+	url = {http://dx.doi.org/10.1145/3279720.3279725}
+}
