--- a/00-start.Rmd
+++ b/00-start.Rmd
@@ -3,6 +3,6 @@
 ![](images/icons8-rocket.png){.cover width="100"} Let's get started by introducing everyone, laying out the plan for the two days, and getting you thinking about your own learning goals.
 
 ```{=html}
-<iframe src="https://rstudio-education.github.io/wtf-teach-rstudio-global/materials/00-welcome/00-welcome.html" width="672px" height="379px">
+<iframe src="https://rstudio-education.github.io/wtf-teach-rstudio-global/materials/00-welcome/00-welcome.html" width="672px" height="379px" allowfullscreen>
 </iframe>
 ```
