--- a/materials/00-welcome/00-welcome.Rmd
+++ b/materials/00-welcome/00-welcome.Rmd
@@ -51,12 +51,12 @@ output:
 
 | Time          | Module                        |
 |---------------|-------------------------------|
-| 08:00 - 08:15 | Introduction                  |
-| 08:15 - 08:55 | Let them eat cake first!      |
+| 13:00 - 13:15 | Introduction                  |
+| 13:15 - 13:55 | Let them eat cake first!      |
 |               | Cherish day one               |
-| 08:55 - 09:05 | Break                         |   
-| 09:05 - 10:00 | Live code, early and often    |
-|               | Provide feedback, instantly   |
+| 13:55 - 14:05 | Break                         |   
+| 14:05 - 15:00 | Live code, early and often    |
+|               | Define and pronounce          |
 
 ---
 
@@ -66,11 +66,11 @@ output:
 
 | Time          | Module                        |
 |---------------|-------------------------------|
-| 08:00 - 08:10 | Recap                         |
-| 08:10 - 08:55 | Leverage visuals              |
+| 13:00 - 13:10 | Recap                         |
+| 13:10 - 13:55 | Provide feedback, instantly   |
+|               | Leverage visuals              |
 |               | Help with finding help        |
-|               | Define and pronounce term     |
-| 08:55 - 09:05 | Break                         |   
-| 09:05 - 10:00 | Highlight diversity           |
+| 13:55 - 14:05 | Break                         |   
+| 14:05 - 15:00 | Highlight diversity           |
 |               | Make room for creativity      |
 |               | Optimize discoverability      |
