--- a/materials/05-feedback/05-feedback.Rmd
+++ b/materials/05-feedback/05-feedback.Rmd
@@ -21,6 +21,11 @@ output:
 ```{r child = "../setup.Rmd"}
 ```
 
+```{r include=FALSE}
+library(tidyverse)
+```
+
+
 class: middle, inverse
 
 # Why auto feedback?
@@ -62,7 +67,7 @@ mean[1]
 ]
 --
 .pull-right-narrow[
-```{r echo=FALSE, fig.align="right"}
+```{r echo=FALSE, fig.align="right", out.width="100%"}
 knitr::include_graphics("images/student.png")
 ```
 ]
@@ -114,7 +119,7 @@ class: middle
 ]
 ]
 .pull-right-narrow[
-```{r echo=FALSE, fig.align="center"}
+```{r echo=FALSE, fig.align="center", out.width="100%"}
 knitr::include_graphics("images/teacher.png")
 ```
 ]
@@ -185,14 +190,6 @@ install.packages("learnr")
   
 ---
 
-background-image: url(images/learnr-first-look.png)
-background-position: center
-background-repeat: no-repeat
-background-size: contain
-class: middle
-
----
-
 ## `r emo::ji("package")` gradethis
 
 - Companion to the learnr package, **gradethis** provides multiple methods to grade learnr exercises:
@@ -207,19 +204,19 @@ devtools::install_github("rstudio-education/gradethis")
 
 ---
 
-.huge-text[demo]
+## Demo
 
 .large[
 [**`[tutorial]`**](https://minecr.shinyapps.io/penguins/) 
 
-[**`[code]`**](https://github.com/mine-cetinkaya-rundel/teach-r-online/blob/master/02-tutorial/examples/lego-sales/lego-sales.Rmd)
+[**`[code]`**](https://github.com/rstudio-education/wtf-teach-rstudio-global/tree/main/materials/05-feedback/penguins/penguins.Rmd)
 ]
 
 ---
 
 class: middle, inverse
 
-.huge-text[learnr]
+# learnr
 
 ---
 
@@ -227,9 +224,9 @@ class: middle, inverse
 
 Start with a YAML, just like in R Markdown:
 
-```{r eval=FALSE}
+```
 ---
-title: "Lego Sales"
+title: "Palmer penguins"
 output: 
   learnr::tutorial:
     progressive: true
@@ -249,15 +246,15 @@ runtime: shiny_prerendered
 
 - You can change the style of your learnr tutorial
 - You might, at a minimum, implement a couple customizations for accessibility:
-  - Increase font size in the narrative, using a [CSS file](https://github.com/mine-cetinkaya-rundel/teach-r-online/blob/master/02-tutorial/examples/lego-sales/css/font-size.css) that lives in a directory called `css/` and loaded in the YAML with
+  - Increase font size in the narrative, using a [CSS file](https://github.com/rstudio-education/wtf-teach-rstudio-global/tree/main/materials/05-feedback/penguins/css/font-size.css) that lives in a directory called `css/` and loaded in the YAML with
 
-```{r eval=FALSE}
+```
 css: "css/font-size.css"
 ```
 
-  - Increase font size in code boxes, using a [JS file](https://github.com/mine-cetinkaya-rundel/teach-r-online/blob/master/02-tutorial/examples/lego-sales/js/exercise-font-size.js) that lives in a directory called `js/` and loaded with 
+  - Increase font size in code boxes, using a [JS file](https://github.com/rstudio-education/wtf-teach-rstudio-global/tree/main/materials/05-feedback/penguins/js/exercise-font-size.js) that lives in a directory called `js/` and loaded with 
   
-```{r eval=FALSE}
+```
 <script language="JavaScript" src="js/exercise-font-size.js"></script>
 ```
   
@@ -266,19 +263,18 @@ css: "css/font-size.css"
 ## Narrative
 
 - R Markdown style section and subsection headings with `##`, `###`, etc.
-- Text, figures, illustrations, and equations.
+- Text, figures, illustrations, and equations
 - Videos: supported services include YouTube and Vimeo
 
-```{r eval=FALSE}
+```
 ### Learning goals
 
-- Create frequency tables and arrange them in ascending / descending order
-- Convert numerical variables into ordinal variables by grouping ranges
-- Calculate summary statistics for groups in your data
+-   Practice developing exercises with learnr.
+-   Practice writing code checking tests with gradethis.
 
 ### Getting help
 
-If you have any questions about the assignment, please post them on [Piazza](https://piazza.com)!
+If you have any questions call for help in Zoom!
 ```
 
 ---
@@ -326,24 +322,6 @@ question_text(
 
 ---
 
-.your-turn[
-*We strongly recommend one person in each group share their screen and everyone work together to work through the document.*
-
-- Go to [bit.ly/teach-r-online-cloud](https://bit.ly/teach-r-online-cloud)
-- Log in with Google or GitHub, or create a new account
-- Once you join our workspace, start the assignment titled `Palmer penguins`
-- Open `penguins.Rmd` and click on **Run Document**
-- Read the instructions under `Multiple choice questions`
-- See help for `?question` and `?quiz` and don't hesitate to call for help!
-]
-
-```{r echo=FALSE}
-countdown(minutes = 10)
-```
-
-
----
-
 ## Code exercises - rendered
 
 ```{r echo=FALSE, out.width="85%", fig.align="center"}
@@ -360,80 +338,42 @@ knitr::include_graphics("images/learnr-exercise-code.png")
 
 ---
 
-## Code exercises - solution
+class: middle, inverse
+
+# gradethis
+
+---
+
+## Code exercises - checking
 
 ```{r echo=FALSE, out.width="85%", fig.align="center"}
 knitr::include_graphics("images/learnr-exercise-submit.png")
 ```
 
 ```{r echo=FALSE, out.width="80%", fig.align="center"}
-knitr::include_graphics("images/learnr-exercise-solution.png")
+knitr::include_graphics("images/learnr-exercise-check-result.png")
 ```
 
 ---
 
-class: middle, inverse
-
-.huge-text[gradethis]
-
----
-
-```{r echo=FALSE, out.width="85%", fig.align="center"}
-knitr::include_graphics("images/learnr-exercise-check-1.png")
-```
-
----
-
-```{r echo=FALSE, out.width="75%", fig.align="center"}
-knitr::include_graphics("images/learnr-exercise-check-2.png")
-```
-
----
-
-```{r echo=FALSE, out.width="75%", fig.align="center"}
-knitr::include_graphics("images/learnr-exercise-check-3.png")
-```
-
----
-
-## Checking the result
+## Checking the result - `grade_this()`
 
 - Use a code chunk with the same label, suffixed with `-check`
 - `.result` refers to the resulting output
 - Think about ways things can go wrong and write test cases for them
-- Write a "catch all" test case for everything else
+- Write a "catch all" fail statement for everything else
 
-```{r echo=FALSE, out.width="100%", fig.align="center"}
+```{r echo=FALSE, out.width="80%", fig.align="center"}
+knitr::include_graphics("images/learnr-exercise-check-result.png")
+```
+
+---
+
+## Checking code - `grade_this_code()`
+
+```{r echo=FALSE, out.width="80%", fig.align="center"}
 knitr::include_graphics("images/learnr-exercise-check-code.png")
 ```
-
----
-
-```{r}
-knitr::knit_exit()
-```
-
-
-.your-turn[
-*We again strongly recommend one person in each breakout room share their screen and everyone work together.*
-
-- Go to [bit.ly/teach-r-online-cloud](https://bit.ly/teach-r-online-cloud)
-- In the assignment titled `Palmer penguins`, open `penguins.Rmd` and click on **Run Document**
-- Read the instructions under `Code exercises`
-- Write more hints and code checking tests 
-]
-
-```{r echo=FALSE}
-countdown(minutes = 15)
-```
-
----
-
-## Other checking options
-
-- `grade_code()`: Grade code against a solution
-- `grade_conditions()`: Grade all specified conditions
-- See `gradethis::gradethis_demo()` for a walk through of how each of these options work
 
 ---
 
@@ -448,25 +388,9 @@ countdown(minutes = 15)
 
 ---
 
-## Known challenges
-
---
-
-- Currently (July 2020) learnr gives a warning if the exercise code chunk produces an invisible result, e.g. code chunk makes an assignment instead of outputting a result -- this might be fixed soon [[PR]](https://github.com/rstudio/learnr/pull/373)
-
---
-
-- If code in the exercise chunk is invalid, you might get the R error instead:
-
-```{r echo=FALSE, out.width="100%", fig.align="center"}
-knitr::include_graphics("images/learnr-code-error.png")
-```
-
----
-
 class: middle, inverse
 
-.huge-text[sharing]
+# Sharing
 
 ---
 
@@ -478,7 +402,7 @@ class: middle, inverse
   - shinyapps.io
   - RStudio Connect (free for academic use, requires setup)
 
-- Road less travelled: distribute as a package
+- Road less travelled: [distribute as a package](https://education.rstudio.com/blog/2020/09/delivering-learnr-tutorials-in-a-package/)
 
 - See the [publishing instructions](https://rstudio.github.io/learnr/publishing.html) on the learnr website for step-by-step instructions
 
@@ -486,8 +410,7 @@ class: middle, inverse
 
 class: middle, inverse
 
-.huge-text[recording]
-.huge-text[data]
+# Recording data
 
 ---
 
@@ -500,15 +423,11 @@ Google/Microsoft/etc. Form at the end and ask students to "submit" their work.
 
 - **Tip:** Add a free-text question to the form asking students to reflect on the exercises they just completed - you can then analyse the free-text data to gain insights into what students are struggling with -- "minute paper".
 
-.large[
-[**`[example]`**](https://minecr.shinyapps.io/04-wrangleviz/#section-finish-up)
-]
-
 ---
 
 ## Recording solutions
 
-- The [`learnrhash`](https://github.com/rundel/learnrhash) package builds on the previous method by providing a way for students to submit their answers by generating a text "hash" which can be copy and pasted into the web form.
+- The [`learnrhash`](https://rundel.github.io/learnrhash/) package builds on the previous method by providing a way for students to submit their answers by generating a text "hash" which can be copy and pasted into the web form.
 
 ```{r eval=FALSE}
 devtools::install_github("rundel/learnrhash")
@@ -518,37 +437,16 @@ devtools::install_github("rundel/learnrhash")
 
 
 .footnote[
+.small[
 See also the [**submitr**](https://github.com/dtkaplan/submitr) package by Danny Kaplan for a different approach to recording event data in learnr tutorials.
 ]
-
----
-
-.huge-text[demo]
-
-.large[
-[**`[tutorial]`**](https://gallery.shinyapps.io/lego-sales/) 
-
-[**`[code]`**](https://github.com/mine-cetinkaya-rundel/teach-r-online/blob/master/02-tutorial/examples/lego-sales/lego-sales.Rmd)
 ]
-
----
-
-## Submissions
-
-Since I've just submitted, my details and my hash will now be stored in a Google Sheet - if you would like to play around with this data (Instructor mode) you can access it here:
-
-.center[ .large[
-[**`[tutorial-data]`**](https://bit.ly/tutorial-data)
-] ]
-
-We don't have time today to demo reading in and decoding these data, but we will include code for the whole process in the **[learnrhash package repository](https://github.com/rundel/learnrhash)** in the next week, using data from your submissions.
 
 ---
 
 class: middle, inverse
 
-.huge-text[closing]
-.huge-text[thoughts]
+# Closing thoughts
 
 ---
 
@@ -556,41 +454,41 @@ class: middle, inverse
 
 --
 
-- Measure twice, cut once (verify the correctness of your tests) 📏📏 ✂️
+- Measure twice, cut once (verify the correctness of your tests)
 
 --
 
-- Use rounding & type coercion to write robust tests 💪
+- Use rounding & type coercion to write robust tests
 
 --
 
-- Don't give automated feedback on everything, asking narrative questions that can't be auto checked but gets the student thinking and writing has pedagogical benefits 🙈
+- Don't give automated feedback on everything, asking narrative questions that can't be auto checked but gets the student thinking and writing has pedagogical benefits
 
 --
 
-- Consider peer feedback where automated feedback is not feasible (e.g. interpretation, narrative) but scalability is an issue 👯
+- Consider peer feedback where automated feedback is not feasible (e.g. interpretation, narrative) but scalability is an issue
 
 ---
 
 .large[
+.light-blue[
 .hand[Q: What is an approachable way to get started?]
+]
 ]
 
 Build a tutorial where students build develop their analysis in exercise code 
 chunks (that are not checked) and only multiple choice questions are used for 
-assessment. [**`[example]`**](https://minecr.shinyapps.io/04-wrangleviz)
-
-```{r echo=FALSE, out.width="85%", fig.align="center"}
-knitr::include_graphics("images/learnr-simple.png")
-```
+assessment.
 
 ---
 
 .large[
+.light-blue[
 .hand[Q: I've built simple tutorials already. How do I make the jump to code checking and providing automated feedback that is actually useful?]
 ]
+]
 
-- Replicate `gradethis::gradethis_demo()`, then make incremental changes
+- Replicate an existing tutorial with checks (e.g. [this one](https://minecr.shinyapps.io/feedback-at-scale/)) and make incremental changes
 - Read the [Testing](https://r-pkgs.org/tests.html#test-tests) chapter in R Packages (Wickham and Bryan) 
 - Also read the [Metaprogramming](https://adv-r.hadley.nz/metaprogramming.html) section in Advanced R (Wickham)
 
@@ -601,7 +499,9 @@ knitr::include_graphics("images/learnr-learn-more.jpeg")
 ---
 
 .large[
+.light-blue[
 .hand[Q: Sounds great, but can it handle my class size and usage?]
+]
 ]
 
 - First, chances are you're not using these live, but you might be...
@@ -613,14 +513,13 @@ knitr::include_graphics("images/learnr-learn-more.jpeg")
 ---
 
 .large[
+.light-blue[
 .hand[Q: Where can I find more examples?]
 ]
+]
 
-* Both the learnr package and gradethis have a large number of examples, e.g.
-```{r eval=FALSE}
-gradethis::gradethis_demo()
-```
+* [dsbox](https://rstudio-education.github.io/dsbox/tutorials/index.html) - Tutorials accompanying [Data Science in a Box](https://datasciencebox.org/)
 
-* [RStudio Cloud Primers](https://rstudio.cloud/learn/primers) - these are all learnr tutorials and their code is available on [github](https://github.com/rstudio-education/primers).
+* [RStudio Cloud Primers](https://rstudio.cloud/learn/primers) - these are all learnr tutorials and their code is available on [github](https://github.com/rstudio-education/primers)
 
-* [Data Science in a Box](http://datasciencebox.org) - we will be adding learnr tutorials we develop here.
+* [tutorialgRaficosFN](https://github.com/yabellini/tutorialgRaficosFN) by Yanina Saibene Bellini
