--- a/05-feedback.Rmd
+++ b/05-feedback.Rmd
@@ -4,8 +4,40 @@
 The simplest solution is using assignments that are easier to auto-grade, e.g. multiple-choice questions, simplistic coding exercises, but it is impossible to assess mastery of the entire data science cycle using only these types of exercises.
 In this talk I will discuss writing effective learnr exercises, providing useful and motivating feedback with gradethis, distributing them at scale online and as an R package, and collecting student data for formative assessment with learnrhash.
 
-<!--# more hands on walkthrough of https://rstd.io/global2021/mcr -->
+## Slides
 
-------------------------------------------------------------------------
+```{=html}
+<iframe src="https://rstudio-education.github.io/wtf-teach-rstudio-global/materials/05-feedback/05-feedback.html" width="672px" height="379px" allowfullscreen></iframe>
+```
+::: {.tip}
+To view the slides in full screen, click on the slides and then hit F on your keyboard.
+:::
 
-Materials to be posted.
+## Your turn
+
+::: {.clock}
+You have 10 minutes for this activity.
+:::
+
+1.  Start the assignment titled **05 - Palmer penguins** on RStudio Cloud.
+
+2.  Complete the task under *Multiple choice questions*
+
+    -   See help for `?question()` and `?quiz()` and don't hesitate to call for help!
+
+3.  Complete the task under *Code exercises* by writing more hints and code checking tests
+
+::: {.rstudio-cloud}
+You will use RStudio Cloud for these exercises.
+Click [here](https://rstudio.cloud/spaces/116472/join?access_code=gDHGlJsqAISVgo6FWUpd4FKfZIe6rULO%2FoLvjC85) to join or access the RStudio Cloud workspace for this workshop.
+:::
+
+## More resources
+
+::: {.tutorial}
+[Feedback at scale](https://minecr.shinyapps.io/feedback-at-scale/) from rstudio::global(2021)
+:::
+
+::: {.package}
+Tutorials in the [dsbox](https://rstudio-education.github.io/dsbox/tutorials/index.html) package
+:::
