--- a/materials/09-diversity/09-diversity.Rmd
+++ b/materials/09-diversity/09-diversity.Rmd
@@ -16,3 +16,51 @@ output:
 ```{r child = "../setup.Rmd"}
 ```
 
+## Diversity in languages
+
+Just a few examples...
+
+- [**datos**](https://cienciadedatos.github.io/datos/) - Provides the Spanish translation of English data sets originally available in other R packages
+
+- [**dados**](https://cienciadedatos.github.io/dados/) - Provides the Spanish translation of English data sets originally available in other R packages
+
+- [R4DS en espanol](https://r4ds-en-espaniol.netlify.app/) and in many other languages!
+
+- [RLadies Global on YouTube](https://www.youtube.com/channel/UCDgj5-mFohWZ5irWSFMFcng)
+
+---
+
+## Diversity in data
+
+.pull-left[
+```{r echo=FALSE, out.width="100%"}
+knitr::include_graphics("images/sign-data.png")
+```
+]
+.pull-right[
+A few examples of datasets with non-binary gender
+
+- EU Lesbian, Gay, Bisexual and Transgender Survey
+- European Network for the Investigation of Gender Incongruence
+- LGBTData: repository by Drexel University School of Public Health
+- Population Research in Sexual Minority Health (PRISM) Data Archive
+- US Center for Disease Control (CDC)  data
+]
+
+.footnote[
+.small[
+[significancemagazine.com/624](https://www.significancemagazine.com/624)
+]
+]
+
+---
+
+## Diversity in voices you amplify
+
+It makes a difference to make an effort to diversify your
+
+- citations
+- referenced blog posts
+- linked videos
+- etc.
+
