Remove last module

--- a/materials/00-welcome/00-welcome.Rmd
+++ b/materials/00-welcome/00-welcome.Rmd
@@ -64,8 +64,7 @@ output:
 | 13:10 - 13:55 | Make room for creativity      |
 |               | Provide feedback, instantly   |
 |               | Help with finding help        |
-|               | Define and pronounce          |
 | 13:55 - 14:05 | Break                         |   
-| 14:05 - 15:00 | Leverage visuals              |
+| 14:05 - 15:00 | Define and pronounce          |
+|               | Leverage visuals              |
 |               | Highlight diversity           |
-|               | Optimize discoverability      |
