let's try this now

--- a/07-speak.Rmd
+++ b/07-speak.Rmd
@@ -31,7 +31,7 @@ aggregate(penguins[, 3], list(penguins$species), median, na.rm = TRUE)
 
 ```{r message = FALSE}
 library(palmerpenguins)
-library(tidyverse)
+library(dplyr)
 
 penguins %>%
   group_by(species) %>%
